[package]
name = "smolrunner"
version = "0.1.0"
edition = "2024"
description = "A small-fleet steward for self-hosted GitHub Actions on ordinary Linux servers"
repository = "https://github.com/teamleaderleo/smolrunner"
keywords = ["github-actions", "self-hosted", "runner", "podman", "devops"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
